<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DetailEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ProgressBar
            android:id="@+id/detail_event_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageEvent"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/titleEventTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textAppearance="?attr/textAppearanceHeadline2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageEvent"
            tools:text="Titulo Evento 1" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/titlePriceSymbolTextView"
            app:layout_constraintStart_toEndOf="@id/titlePriceSymbolTextView"
            app:layout_constraintTop_toTopOf="@id/titlePriceSymbolTextView"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:text="29.90" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="@id/titleDateTextView"
            app:layout_constraintStart_toEndOf="@id/titleDateTextView"
            app:layout_constraintTop_toTopOf="@id/titleDateTextView"
            tools:text="29/12/2023" />

        <TextView
            android:id="@+id/titleDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/event_date"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEventTextView" />

        <TextView
            android:id="@+id/titlePriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/event_price"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDateTextView" />

        <TextView
            android:id="@+id/titlePriceSymbolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/priceSymbol"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toBottomOf="@id/titlePriceTextView"
            app:layout_constraintStart_toEndOf="@id/titlePriceTextView"
            app:layout_constraintTop_toBottomOf="@id/titleDateTextView"
            app:layout_constraintTop_toTopOf="@id/titlePriceTextView" />

        <TextView
            android:id="@+id/titleDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/event_description"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titlePriceTextView" />

        <TextView
            android:id="@+id/descriprionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDescriptionTextView"
            tools:text="@tools:sample/lorem/random" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:backgroundTint="?attr/colorSecondary"
            android:text="@string/event_button_share"
            android:textColor="@color/white"
            app:icon="@drawable/ic_share"
            android:textAppearance="?attr/textAppearanceButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriprionTextView" />

        <Button
            android:id="@+id/checkInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/event_button_check_in"
            android:textColor="@color/white"
            app:backgroundTint="?attr/colorSecondary"
            android:textAppearance="?attr/textAppearanceButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:icon="@drawable/ic_event_available"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriprionTextView" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/detailGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="imageEvent,titleEventTextView, priceTextView, dateTextView,
            titleDateTextView, titlePriceTextView, titlePriceSymbolTextView, titleDescriptionTextView,
             descriprionTextView, shareButton, checkInButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>